--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           # checkout my specific branch
-          ref: main
+          ref: master
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
