--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,24 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
+        - uses: actions/checkout@v2
+# jobs:
+#   build:
+#     runs-on: macos-latest
+#     steps:
 
         
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-      - name: pip install dependencies basic
-        run: pip install -r blockly_server/requirements.txt
-      - name: pip install dependencies extra
-        run: pip install -r blockly_server/requirements_app.txt
-      - name: compile GUI for Mac OS
-        run: python -m pyinstaller blockly_server/app.spec
-      - name: see files
-        run: |
-          cd dist/
-          ls
-          pwd
+#       - uses: actions/setup-python@v4
+#         with:
+#           python-version: "3.8"
+#       - name: pip install dependencies basic
+#         run: pip install -r blockly_server/requirements.txt
+#       - name: pip install dependencies extra
+#         run: pip install -r blockly_server/requirements_app.txt
+#       - name: compile GUI for Mac OS
+#         run: python -m pyinstaller blockly_server/app.spec
+#       - name: see files
+#         run: |
+#           cd dist/
+#           ls
+#           pwd
