--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,22 @@ on: [workflow_dispatch]
 jobs:
   build:
     runs-on: macos-latest
+    defaults:
+      run:
+        working-directory: blockly_server
     steps:
         - uses: actions/checkout@v2
         - uses: actions/setup-python@v4
           with:
             python-version: "3.8"
         - name: pip install dependencies basic
-          run: pip install -r blockly_server/requirements.txt
+          run: pip install -r requirements.txt
         - name: pip install dependencies extra
-          run: pip install -r blockly_server/requirements_app.txt
+          run: pip install -r requirements_app.txt
         - name: Install pyinstaller
           run: pip install pyinstaller
         - name: compile GUI for Mac OS
-          run: python -m pyinstaller blockly_server/app.spec
+          run: python -m pyinstaller app.spec
         - name: see files
           run: |
             cd dist/
