--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           uses: actions/upload-artifact@v3
           with:
             name: macos-fossbot
-            path: dist
+            path: dist/
 
