--- a/.github/workflows/windows_app.yml
+++ b/.github/workflows/windows_app.yml
@@ -21,8 +21,12 @@ jobs:
           run: pip install pyinstaller
         - name: compile GUI for Windows OS
           run: pyinstaller app.spec
+        - name: see files
+          run: |
+            cd dist
+            dir
         - name: Upload artifact
           uses: actions/upload-artifact@v3
           with:
             name: windows-fossbot
-            path: dist/
+            path: D:\\a\\fossbot-app\\fossbot-app\\blockly_server\\dist
