--- a/.github/workflows/ubuntu_app.yml
+++ b/.github/workflows/ubuntu_app.yml
@@ -13,8 +13,8 @@ jobs:
         - uses: actions/setup-python@v4
           with:
             python-version: "3.8"
-        - name: Env var
-          run: export PYTHON_CONFIGURE_OPTS="--enable-shared" 
+        - name: Install Dev
+          run: apt-get install python3-dev
         - name: pip install dependencies basic
           run: pip install -r requirements.txt
         - name: pip install dependencies extra
