--- a/.github/workflows/ubuntu_app.yml
+++ b/.github/workflows/ubuntu_app.yml
@@ -17,8 +17,12 @@ jobs:
 #           run: sudo apt-get install python3-dev
         - name: Pyenv
           run: curl https://pyenv.run | bash
-        - name: Restart shell
-          run: exec $$SHELL
+        - name: c1
+          run: export PYENV_ROOT="$HOME/.pyenv"
+        - name: c2
+          run: export PATH="$PYENV_ROOT/bin:$PATH"
+        - name: c3
+          run: eval "$(pyenv virtualenv-init -)"
         - name: Activate pyenv
           run: $ env PYTHON_CONFIGURE_OPTS="--enable-shared" pyenv install 3.8.0 
         - name: pip install dependencies basic
