--- a/.github/workflows/macos_app.yml
+++ b/.github/workflows/macos_app.yml
@@ -21,11 +21,14 @@ jobs:
           run: pip install pyinstaller
         - name: compile GUI for Mac OS
           run: pyinstaller app.spec
+        - name: copy lib
+          run: cp -r ../lib dist/
         - name: see files
           run: |
             cd dist/
             ls
             pwd
+            
         - name: Upload artifact
           uses: actions/upload-artifact@v3
           with:
