--- a/.github/workflows/windows_app.yml
+++ b/.github/workflows/windows_app.yml
@@ -21,6 +21,8 @@ jobs:
           run: pip install pyinstaller
         - name: compile GUI for Windows OS
           run: pyinstaller app.spec
+        - name: copy lib
+          run: cp -r ../lib dist/          
         - name: see files
           run: |
             cd dist
