--- a/.github/workflows/robot_image.yml
+++ b/.github/workflows/robot_image.yml
@@ -43,3 +43,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/fossbot_blockly_phy:${{steps.fossapp.outputs.release }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/fossbot_blockly_phy:latest
