--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -19,6 +19,8 @@ pyasn1==0.5.1
 pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
+PyJWT==2.6.0
+python-decouple==3.7
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
