web-socket and simulator server added, integration with front-end Monaco editor

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,8 +29,12 @@
     "blockly": "^10.2.2",
     "framer-motion": "^10.16.4",
     "i18next": "22.0.6",
+    "jquery": "^3.7.1",
+    "jquery.terminal": "^2.37.2",
     "lodash": "4.17.21",
     "monaco-editor": "^0.44.0",
+    "node-fecth": "^0.0.1-security",
+    "pyodide": "^0.23.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-blockly": "^8.1.0",
@@ -40,7 +44,6 @@
     "react-intersection-observer": "^9.5.2",
     "react-redux": "8.0.2",
     "react-resizable-panels": "^0.0.56",
-    "react-resize-panel": "^0.3.5",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-slick": "^0.29.0",
@@ -48,6 +51,7 @@
     "simplebar": "^6.2.5",
     "simplebar-react": "2.4.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "stylis-plugin-rtl": "2.0.2",
     "typescript": "4.7.4"
   },
