--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -24,6 +24,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "public/pyodideWorker.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
