--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -20,9 +20,9 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["src", "public/pyodideWorker.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
