--- a/front-end/package.json
+++ b/front-end/package.json
@@ -73,5 +73,17 @@
     "@types/react-helmet": "6.1.5",
     "@types/react-redux": "7.1.24",
     "typescript": "^5.0.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
