working with bugs, docker compose for back-end, basic security, database connection

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fossbot-platform",
   "private": true,
+  "proxy": "http://localhost:8000",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
