--- a/front-end/package.json
+++ b/front-end/package.json
@@ -59,6 +59,7 @@
     "socket.io-client": "^4.7.4",
     "stylis-plugin-rtl": "2.0.2",
     "typescript": "4.7.4",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
     "yup": "^1.3.3"
   },
