--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -1,35 +1,3 @@
-// {
-//   "compilerOptions": {
-//     "baseUrl": ".",
-//     "paths": {
-//       "src/*": ["src/*"]
-//     },
-//     "target": "ES2020",
-//     "useDefineForClassFields": true,
-//     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-//     "module": "ESNext",
-//     "skipLibCheck": true,
-
-//     /* Bundler mode */
-//     "moduleResolution": "bundler",
-//     "allowImportingTsExtensions": true,
-//     "resolveJsonModule": true,
-//     "isolatedModules": true,
-//     "noEmit": true,
-//     "jsx": "react-jsx",
-
-//     /* Linting */
-//     "strict": true,
-//     "noUnusedLocals": false,
-//     "noUnusedParameters": false,
-//     "noFallthroughCasesInSwitch": false
-//   },
-//   "include": ["src"],
-//   "types": [
-//     "node"
-//   ],
-// }
-
 {
   "compilerOptions": {
     "baseUrl": ".",
@@ -61,7 +29,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
 
     /* Linting */
     // "strict": false,
@@ -70,9 +38,7 @@
     // "noFallthroughCasesInSwitch": false,
     // "forceConsistentCasingInFileNames": false,
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"]
   // "types": [
   //       "node"
   // ],
