--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
             sudo docker rmi -f fsbt-front
             sudo docker rmi -f fsbt-sim
             sudo docker rmi -f fsbt-back
-            sudo docker compose -f docker-compose-production.yml up -d --force-recreate
+            sudo docker compose -f docker-compose-production.yml up -d --force-recreate --no-cache
           EOF
