--- a/front-end/package.json
+++ b/front-end/package.json
@@ -43,10 +43,10 @@
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.33",
     "pyodide": "^0.23.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-blockly": "^8.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "12.0.0",
     "react-intersection-observer": "^9.5.2",
@@ -61,7 +61,9 @@
     "simplebar-react": "2.4.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
+    "stats.js": "^0.17.0",
     "stylis-plugin-rtl": "2.0.2",
+    "three": "^0.164.1",
     "typescript": "4.7.4",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
