--- a/front-end/package.json
+++ b/front-end/package.json
@@ -50,6 +50,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "12.0.0",
     "react-intersection-observer": "^9.5.2",
+    "react-player": "^2.16.0",
     "react-redux": "8.0.2",
     "react-resizable-panels": "^0.0.56",
     "react-router": "6.3.0",
