--- a/front-end/package.json
+++ b/front-end/package.json
@@ -33,6 +33,7 @@
     "crypto-browserify": "^3.12.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "handtrackjs": "^0.1.5",
     "i18next": "22.0.6",
     "jquery": "^3.7.1",
     "jquery.terminal": "^2.37.2",
