minor bugs for ssl deployment

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -9,17 +9,6 @@ services:
       - "8000:8000"
     volumes:
       - ./back-end/test.db:/usr/src/app/back-end/test.db
-   
-  # simulator:
-  #   image: fsbt-sim
-  #   container_name: fsbt-sim
-  #   build: ./simulator
-  #   environment:
-  #     SOCKETIO_IP: 34.141.148.0
-  #   ports:
-  #     - "5000:5000"
-  #   depends_on:
-  #     - backend
 
   frontend:
     image: fsbt-front
@@ -27,5 +16,10 @@ services:
     build: ./front-end
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./front-end/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt/live/fossbot-platform.duckdns.org/fullchain.pem:/etc/letsencrypt/live/fossbot-platform.duckdns.org/fullchain.pem
+      - /etc/letsencrypt/live/fossbot-platform.duckdns.org/privkey.pem:/etc/letsencrypt/live/fossbot-platform.duckdns.org/privkey.pem
     depends_on:
-      - simulator
+      - backend
