--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -12,4 +12,5 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Run app.py when the container launches
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "" ,"--proxy-headers"]
+
