--- a/front-end/.env.production
+++ b/front-end/.env.production
@@ -1,3 +1,1 @@
-REACT_APP_SIM_URL=http://34.141.148.0:5000/
-REACT_APP_GODOT_URL=http://34.141.148.0:5000/godot
-REACT_APP_BACKEND_URL=http://34.141.148.0:8000
+REACT_APP_BACKEND_URL=https://fossbot-platform.duckdns.org/api
