--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,8 +4,26 @@ services:
     image: fsbt-back
     container_name: fsbt-back
     build: ./back-end
+    environment:
+      - SECRET_KEY=your-secret-key
+      - ADMIN_USERNAME=admin
+      - ADMIN_PASSWORD=admin
+      - DATABASE=postgresql://postgres:postgres@db:5432/postgres
     ports:
       - "8000:8000"
     volumes:
       - ./back-end/test.db:/usr/src/app/back-end/test.db
       - ./back-end/main.py:/usr/src/app/back-end/main.py
+
+  db:
+    image: postgres:latest
+    container_name: fsbt-db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
