--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -5,6 +5,11 @@ services:
     image: fsbt-back
     container_name: fsbt-back
     build: ./back-end
+    environment:
+      - SECRET_KEY=your-secret-key
+      - ADMIN_USERNAME=admin
+      - ADMIN_PASSWORD=admin
+      - DATABASE=postgresql://postgres:postgres@db:5432/postgres
     ports:
       - "8000:8000"
     volumes:
@@ -23,3 +28,15 @@ services:
       - /etc/letsencrypt/live/fossbot-platform.duckdns.org/privkey.pem:/etc/letsencrypt/live/fossbot-platform.duckdns.org/privkey.pem
     depends_on:
       - backend
+  db:
+    image: postgres:latest
+    container_name: fsbt-db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
