--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,11 +4,8 @@ services:
     image: fsbt-back
     container_name: fsbt-back
     build: ./back-end
-    environment:
-      - SECRET_KEY=your-secret-key
-      - ADMIN_USERNAME=admin
-      - ADMIN_PASSWORD=admin
-      - DATABASE=postgresql://postgres:postgres@db:5432/postgres
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     volumes:
@@ -18,10 +15,8 @@ services:
   db:
     image: postgres:latest
     container_name: fsbt-db
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+    env_file:
+      - .env
     volumes:
       - db-data:/var/lib/postgresql/data
 
