permission on github action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,14 +25,13 @@ jobs:
             sudo git reset --hard origin/master
             if [ -f .env ]; then
               sudo rm .env
-            fi
-            sudo echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
-            sudo echo "ADMIN_USERNAME=${{ secrets.ADMIN_USERNAME }}" >> .env
-            sudo echo "ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}" >> .env
-            sudo echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-            sudo echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-            sudo echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-            sudo echo "DATABASE=${{ secrets.DATABASE }}" >> .env            
+            echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" | sudo tee -a .env > /dev/null
+            echo "ADMIN_USERNAME=${{ secrets.ADMIN_USERNAME }}" | sudo tee -a .env > /dev/null
+            echo "ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}" | sudo tee -a .env > /dev/null
+            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" | sudo tee -a .env > /dev/null
+            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" | sudo tee -a .env > /dev/null
+            echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" | sudo tee -a .env > /dev/null
+            echo "DATABASE=postgresql://\${POSTGRES_USER}:\${POSTGRES_PASSWORD}@db:5432/\${POSTGRES_DB}" | sudo tee -a .env > /dev/null
             sudo docker compose -f docker-compose-production.yml down 
             sudo docker compose -f docker-compose-production.yml build --no-cache
             sudo docker compose -f docker-compose-production.yml up -d
