backend Dockerfile bug

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
             echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" | sudo tee -a .env > /dev/null
             echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" | sudo tee -a .env > /dev/null
             echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" | sudo tee -a .env > /dev/null
-            echo "DATABASE=postgresql://\${{secrets.POSTGRES_USER}}:\${{secrets.POSTGRES_PASSWORD}}@db:5432/\${{secrets.POSTGRES_DB}}" | sudo tee -a .env > /dev/null
+            echo "DATABASE=postgresql://${{secrets.POSTGRES_USER}}:${{secrets.POSTGRES_PASSWORD}}@db:5432/${{secrets.POSTGRES_DB}}" | sudo tee -a .env > /dev/null
             sudo docker compose -f docker-compose-production.yml down
             sudo docker compose -f docker-compose-production.yml build --no-cache
             sudo docker compose -f docker-compose-production.yml up -d
