--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name fossbot-platform.duckdns.org;
+    server_name fossbot.gr;
 
     # Redirect all HTTP traffic to HTTPS
     location / {
@@ -10,10 +10,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name fossbot-platform.duckdns.org;
+    server_name fossbot.gr;
 
-    ssl_certificate /etc/letsencrypt/live/fossbot-platform.duckdns.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/fossbot-platform.duckdns.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/fossbot.gr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/fossbot.gr/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
