matomo analytics service

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 DATABASE=postgresql://postgres:postgres@db:5432/postgres
+MATOMO_DATABASE_HOST=db
+MATOMO_DATABASE_ADAPTER=pgsql
+MATOMO_DATABASE_TABLES_PREFIX=matomo_
+MATOMO_DATABASE_USERNAME=matomo
+MATOMO_DATABASE_PASSWORD=matomo
+MATOMO_DATABASE_DBNAME=analytics
