--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -35,6 +35,17 @@ server {
         proxy_set_header Connection "";
     }
 
+    # Proxy Matomo requests to the Matomo container
+    location /analytics/ {
+        proxy_pass http://matomo:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+    }
+
     # Error pages
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
