--- a/.env
+++ b/.env
@@ -5,9 +5,13 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 DATABASE=postgresql://postgres:postgres@db:5432/postgres
-MATOMO_DATABASE_HOST=db
-MATOMO_DATABASE_ADAPTER=pgsql
-MATOMO_DATABASE_TABLES_PREFIX=matomo_
-MATOMO_DATABASE_USERNAME=matomo
-MATOMO_DATABASE_PASSWORD=matomo
-MATOMO_DATABASE_DBNAME=analytics
+MATOMO_DATABASE_HOST=mariadb
+MATOMO_DATABASE_USERNAME=admin
+MATOMO_DATABASE_PASSWORD=admin
+MATOMO_DATABASE_DBNAME=matomo_db
+MATOMO_TRUSTED_HOSTS=mydomain.com
+MATOMO_ASSUME_SECURE_PROTOCOL=1
+MYSQL_ROOT_PASSWORD=admin
+MYSQL_DATABASE=matomo_db
+MYSQL_USER=admin
+MYSQL_PASSWORD=admin
