--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -37,7 +37,8 @@ server {
 
     # Proxy Matomo requests to the Matomo container
     location /analytics/ {
-        proxy_pass http://matomo:8080/;
+        proxy_pass http://matomo/;
+        rewrite ^/analytics/(.*)$ /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
