--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -41,16 +41,28 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
 
-  # matomo:
-  #   image: matomo:latest
-  #   container_name: matomo
-  #   restart: always
-  #   ports:
-  #     - "8080:80"
-  #   env_file:
-  #     - .env
-  #   depends_on:
-  #     - db
+  matomo:
+     image: matomo:latest
+     container_name: matomo
+     restart: always
+     env_file:
+       - .env
+     depends_on:
+       - frontend
+       - mariadb
+     volumes:
+       - matomo_data:/var/www/html
 
+  mariadb:
+    image: mariadb:latest
+    restart: always
+    env_file:
+       - .env
+    volumes:
+       - mariadb_data:/var/lib/mysql
+       
 volumes:
   db-data:
+  matomo_data:
+  mariadb_data:
+
