matomo config updates

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ MATOMO_DATABASE_PASSWORD=admin
 MATOMO_DATABASE_DBNAME=matomo_db
 MATOMO_TRUSTED_HOSTS=mydomain.com
 MATOMO_ASSUME_SECURE_PROTOCOL=1
+MATOMO_PROXY_URI_HEADER=1
 MYSQL_ROOT_PASSWORD=admin
 MYSQL_DATABASE=matomo_db
 MYSQL_USER=admin
